--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smart-spinner",
-  "version": "0.0.3",
+  "version": "1.0.0",
   "description": "Simple cli-spinners wrapper.",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/bitifet/node-smartspinner#readme",
   "dependencies": {
+    "chalk": "^2.4.0",
     "cli-spinners": "^1.3.1",
+    "has-unicode": "^2.0.1",
     "log-update": "^2.3.0"
   }
 }
